--- a/Style.css
+++ b/Style.css
@@ -1,10 +1,7 @@
-background{
-	}
-	
 
 body{
     background-color:#3e4d66;
-    font-family: "";
+	margin-bottom: 0%;
     }
 h1{
     font-family:lato;
@@ -14,15 +11,12 @@ h2{
     color:white;    
     font-family:;
   }
- img{
-	
- }
 h5{
     color: black;
 	background-color:white;
 	padding: 1%;
 	font-family:lato;
-	font-size: 15px;
+	font-size: 20px;
 }
 
 .left{
@@ -33,41 +27,12 @@ h5{
 	float: right;
 }
 
-.navigation{
-    background-color:#6ba1f9;
-    color:;
-    padding:;
-    width:%;
-}
+
 .heading{
     background-color:white;
     color:black;
     padding:5%;
     width:%;
-}
-
-3e4d66
-Paragraph1{
-    color:white;
-    background-color:White;
-    padding:10%;
-    width:%;
-}
-
-Paragraph2{
-    color:;
-    padding:10%;
-    width:%90;
-    border:;
-}
-
-Div.gap{
-    padding: 0px
-}
-
-ul {
-	position: sticky;
-	top: 0;
 }
 
 ul {
@@ -100,4 +65,15 @@ li {
 	border-right: 1px solid #bbb;
 }
 
+footer {
+	display: block;
+	color: white;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+	background-color: #333;
+
+}
+
+	
 
